# 1DNavierStokes-Transient

./: .gitignore  CMakeCache.txt  CMakeCommandsToPaste.txt  CMakeLists.txt  ExampleProfiles20nm24_3rd - Copy.txt  ExampleProfiles20nm24_3rd.txt  ExampleProfiles20nm24_3rdNormalized.txt  ExampleProfiles20nm24_3rdNormalized_output.txt  ExampleProfiles20nm24_3rd_output.txt  ExampleProfiles40nm25_3rd.txt  ExampleProfiles40nm25_3rdNormalized.txt  ExampleProfiles40nm25_3rdNormalized_old_output.txt  ExampleProfiles40nm25_3rdNormalized_output.txt  ExampleProfiles40nm25_3rd_output.txt  ExcelProfiles.txt  Navier.cpp  NavierSolver1Dtransient One Stage Reaction.cpp
src/: CMakeLists.txt
src/alglib-cpp/: CMakeLists.txt
